# poke_taisen_ai_test

./: aqua.yaml  first_lerning.py  hello.py  model_weights.pth  pyproject.toml  replay_sclaper.py  sample_test.py  test.py
final/: gen9bssregg-2307433490.json  gen9bssregg-2307444408.json  gen9bssregg-2307445451.json  gen9bssregg-2307445780.json  gen9bssregg-2307446554.json  gen9bssregg-2307446842.json  gen9bssregg-2307448328.json  gen9bssregg-2307449491.json  gen9bssregg-2307450114.json  gen9bssregg-2307450895.json  gen9bssregg-2307451706.json  gen9bssregg-2307454713.json  gen9bssregg-2307460711.json  gen9bssregg-2307464895.json  gen9bssregg-2307469502.json  gen9bssregg-2307470722.json  gen9bssregg-2307487608.json  gen9bssregg-2307487835.json  gen9bssregg-2307488187.json  gen9bssregg-2307489965.json  gen9bssregg-2307490669.json  gen9bssregg-2307492901.json  gen9bssregg-2307496660.json  gen9bssregg-2307498145.json  gen9bssregg-2307500509.json  gen9bssregg-2307502605.json  gen9bssregg-2307504385.json  gen9bssregg-2307506236.json  gen9bssregg-2307506488.json  gen9bssregg-2307510313.json  gen9bssregg-2307510895.json  gen9bssregg-2307512860.json  gen9bssregg-2307514165.json  gen9bssregg-2307516656.json  gen9bssregg-2307517954.json  gen9bssregg-2307522505.json  gen9bssregg-2307539375.json  gen9bssregg-2307544576.json  gen9bssregg-2307545238.json  gen9bssregg-2307547551.json  (+210 more)
party/: p0.txt  p1.txt  p10.txt  p11.txt  p12.txt  p13.txt  p14.txt  p15.txt  p16.txt  p17.txt  p18.txt  p19.txt  p2.txt  p20.txt  p21.txt  p22.txt  p23.txt  p24.txt  p25.txt  p26.txt  p27.txt  p29.txt  (+50 more)
(+250 files in other folders)
