[project]
name = "poke-taisen-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
     "bs4>=0.0.2",
     "requests>=2.32.3",
     "selenium>=4.29.0",
     "pokebase>=1.4.1",
     "torch>=2.0.0",
     "numpy>=1.21.2",
     "poke-env>=0.8.3",
     "gym>=0.26.2",
]
